--- a/web/WEB-INF/views/base.jspf
+++ b/web/WEB-INF/views/base.jspf
@@ -1,2 +1,3 @@
-<%@ page import=", model.Student, model.Course, model.Professor" %>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
+<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
